[SECreateActivity] Utilized isBlank function